@@ -1,7 +1,8 @@
 == 0.5.4
 
 * Support disabling last point when label is shown [Justin Love]
-* Handle missing data (nil) values in area, bar, discrete, smooth
+* Handle missing data (nil) values in area, bar, discrete, smooth [Justin Love]
+* Extract method: normalize [Justin Love]
 
 == 0.5.2
 
